# defi_stats

./: .gitignore  README.md  api_report.py  def_stats.service  defi_stats.service  docker-compose.yml  extract_coin_swaps.py  extract_pubkey_trades.py  import_swaps.sh  requirements.txt  restart_kdf.sh  run.sh  run_api.sh  run_cron.sh  run_mm2.sh  run_tests.sh  scan_endpoints.py  scan_refund_events.py  setup.sh  update_MM2_db.sh
api/: Dockerfile  README.md  cache.py  coin_compare.csv  conftest.py  const.py  cron.py  db.py  dex_api.py  dgraph.py  enums.py  external.py  generics.py  helper.py  init.sh  logger.py  main.py  models.py  orderbook.py  pair.py  pyproject.toml  schema.dgraphql  schema.graphql  setup.cfg  transform.py  utils.py  validate.py
api/cache/: .gitignore
api/calc/: stats-api.py
api/db/: __init__.py  backup_db.py  import_dbs.sh  merge_mm2_dbs.py  mysqldb.py  pgsqldb.py  process_dbs.sh  process_imported_dbs.py  schema.py  sqldb.py  sqlitedb.py  sqlitedb_merge.py  sqlitedb_query.py  sqlitedb_update.py  stats-api-db.py
api/deprecated/: deprecate.py  est_endpoints.py  est_helper.py  fixtures_old.py  misc.py  stats-api-calc.py  stats-api-db.py  stats-api.py
api/docker-entrypoint-initdb.d/: 10-init.sh
api/examples/: client_ip_examples.py
api/lib/: __init__.py  cache.py  cache_calc.py  cache_item.py  cache_load.py  cache_query.py  cmc.py  coin.py  coins.py  dex_api.py  external.py  generic.py  generics.py  last.py  markets.py  models.py  models_gecko.py  models_markets.py  orderbook.py  pair.py  prices.py  seednodes.py  stats_api.py  volumes.py
(+204 files in other folders)
