[tool.poetry]
name = "defi-stats"
version = "0.2.0"
description = "An API for various DEX statistics via the Komodo DeFi SDK"
authors = ["smk <smk@komodoplatform.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.23.2"
fastapi = "^0.101.1"
python-dotenv = "^1.0.0"
httpx = "^0.24.1"
requests = "^2.31.0"
pytest-env = "^1.1.3"
psycopg2 = "^2.9.9"
sqlmodel = "0.0.11"
sqlalchemy = "1.4.51"
fastapi-utils = "0.2.1"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.2.1"
pytest-cov = "^4.1.0"
flake8 = "^4.0.1"
pytest-flake8 = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
